fix : code review changes

--- a/UI/src/hometown-homepage/styles.css
+++ b/UI/src/hometown-homepage/styles.css
@@ -1,115 +1,110 @@
-/**
-Palette: https://scrimba.com/links/hometown-palette
-RED: #E63946
-LIGHT: #F1FAEE
-AQUA: #A8DADC
-LIGHT BLUE: #457B9D
-DARK BLUE: #1D3557
-
-*/
-
-body{
-    margin: 0;
-    text-align: center;
+body {
+	margin: 0;
+	text-align: center;
 }
 
 /* hero section */
-.header{
-    background-image: url("images/torshov.jpg");
-    background-size: cover;
-    height: 340px;
-    padding: 16px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    color: #fff;
-    text-shadow: 0px 0px 2px black;
+header {
+	background-image: url("images/torshov.jpg");
+	background-size: cover;
+	background-position: center;
+	height: 340px;
+	padding: 16px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	color: #fff;
+	text-shadow: 0px 0px 2px black;
 }
 
-.header h2{
-    background: #1D3557;
-    padding: 5px 10px;
-    border-radius: 10px;
-    margin-bottom: 16px;
+header h2 {
+	background: #1d3557;
+	padding: 5px 10px;
+	border-radius: 10px;
+	margin-bottom: 16px;
 }
 
-.header h3{
-    margin-top: 0px;
-    border-radius: 10px;
-    background: #457B9D;
-    padding: 5px 10px;
+header h3 {
+	margin-top: 0px;
+	border-radius: 10px;
+	background: #457b9d;
+	padding: 5px 10px;
+	max-width: 400px;
 }
 
 /* activities/ main section */
 
-.main{
-    background: #F1FAEE;
-    padding: 32px;
-    display: flex;
-    flex-direction: column;
-    color: #1D3557;
+.main {
+	background: #f1faee;
+	padding: 32px;
+	display: flex;
+	flex-direction: column;
+	color: #1d3557;
 }
 
-
-.main-activities{
-    display: flex;
-    justify-content: space-around;
-    margin: 8px auto ;
+.main-activities {
+	display: flex;
+	justify-content: space-around;
+	margin: 8px auto;
 }
 
 .activity {
-     padding: 8px;
+	padding: 8px;
+	max-width: 320px;
 }
 
-.activity img{
-    border-radius: 50%;
-    width: 100px;
-    border: 2px solid #457B9D;
+.activity img {
+	border-radius: 50%;
+	width: 100px;
+	border: 2px solid #457b9d;
 }
 
-.activity img:hover{
-    outline: 4px double #1D3557;
+.activity img:hover {
+	border: 3px solid #457b9d;
+	transform: scale(1.1);
+	transition: transform 200ms, border 100ms;
 }
 
 /* contact / card-section */
 
-.contact{
-    padding: 16px;
+.contact {
+	padding: 16px;
 }
 
-.card{
-    width: 400px;
-    border: 1px solid ;
-    margin: 50px auto;
-    display: flex;
-    padding: 32px;
-    background: #A8DADC;
-    border-radius: 10px;
-    box-shadow: 0px 6px 0px #1D3557;
-    align-items: center;
+.card {
+	max-width: 400px;
+	border: 1px solid;
+	margin: 50px auto;
+	display: flex;
+	padding: 32px;
+	background: #a8dadc;
+	border-radius: 10px;
+	box-shadow: 0px 6px 0px #1d3557;
+	align-items: center;
 }
 
-.card-img{
-    width: 180px;  
-    border-radius: 10px;  
+.card-img {
+	width: 180px;
+	border-radius: 10px;
+	margin-right: 16px;
 }
 
-.card-text{
-    margin-inline-start: auto;
-    width: 200px;
-    color: #1D3557;
+.card-text {
+	margin-inline-start: auto;
+	width: 200px;
+	color: #1d3557;
 }
 
-.card-text p{
-    font-style: italic;
+.card-text p {
+	font-style: italic;
 }
 
 /* utility */
-.font-24{
-    font-size: 24px;
+.font-24 {
+	font-size: 24px;
 }
 
-.font-16{
-    font-size: 16px;
+.font-16 {
+	font-size: 16px;
 }
